Fix for firefox rotating border overflow.

--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body {
   }
 }
 
+#containerBarcode {
+  position: relative;
+}
+
 .rotating-border {
   --border-radius: 0.5rem;
   --border-size: 0.15rem;
